--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "express-session": "^1.17.1",
     "express-validator": "^6.4.1",
     "g": "^2.0.1",
-    "http-errors": "~1.6.3",
+    "http-errors": "^1.6.3",
     "method-override": "^3.0.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
     "path": "^0.12.7",
-    "sequelize": "^5.22.1",
+    "sequelize": "^5.22.3",
     "sequelize-cli": "^5.5.1"
   },
   "devDependencies": {
@@ -44,5 +44,5 @@
     "url": "https://github.com/JonathanAGonzalez/1-GameOver/issues"
   },
   "homepage": "https://github.com/JonathanAGonzalez/1-GameOver#readme",
-  "description": ""
+  "description": "<<<<<<< HEAD\r # 1-GameOver"
 }
