--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
     "path": "^0.12.7",
+    "save": "^2.4.0",
     "sequelize": "^5.22.3",
     "sequelize-cli": "^5.5.1"
   },
