--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "path": "^0.12.7",
     "save": "^2.4.0",
     "sequelize": "^5.22.3",
-    "sequelize-cli": "^5.5.1"
+    "sequelize-cli": "^5.5.1",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^9.15.3"
   },
   "devDependencies": {
     "node": "^13.12.0",
